--- a/MinimalAPI.MongoDB/Dockerfile
+++ b/MinimalAPI.MongoDB/Dockerfile
@@ -20,3 +20,14 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "MinimalAPI.MongoDB.dll"]
+
+# FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine as build
+# WORKDIR /app
+# COPY . .
+# RUN dotnet restore
+# RUN dotnet publish -o /app/published-app
+
+# FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine as runtime
+# WORKDIR /app
+# COPY --from=build /app/published-app /app
+# ENTRYPOINT [ "dotnet", "/app/MinimalAPI.MongoDB.dll" ]
